<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:paddingTop="5dp"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="@dimen/inner_margin"
        android:layout_marginBottom="@dimen/inner_margin"
        android:layout_marginRight="@dimen/inner_margin"
        >
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:fillViewport="true"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="First"
                        android:paddingLeft="5dp"
                        android:id="@+id/tvFirstName" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Last"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvLastName" />

                </TableRow>
                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/composite"
                        android:layout_span="1"
                        android:id="@+id/tvCompositename"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Composite"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvCompositeScore" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/datetime"
                        android:layout_span="1"
                        android:id="@+id/tvDatetimename"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Composite"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvDatetime" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/height"
                        android:layout_span="1"
                        android:id="@+id/tvHeightname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Height"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvHeightScore" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/weight"
                        android:layout_span="1"
                        android:id="@+id/tvWeightname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Weight"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvWeightScore" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/hitting"
                        android:layout_span="1"
                        android:id="@+id/tvHittingname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="hitting"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvHittingScore" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/batting"
                        android:layout_span="1"
                        android:id="@+id/tvBattingname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="accel"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvBattingScore" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/infield"
                        android:layout_span="1"
                        android:id="@+id/tvInfieldname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="fielding"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvInfieldScore" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/outfield"
                        android:layout_span="1"
                        android:id="@+id/tvOutfieldname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="accel"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvOutfieldScore" />
                </TableRow>


                <TableRow
                    android:id="@+id/tableRow11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/throwing"
                        android:layout_span="1"
                        android:id="@+id/tvThrowingname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="catching"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvThrowingScore" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/arm"
                        android:layout_span="1"
                        android:id="@+id/tvArmname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="throwing"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvArmScore" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/speed"
                        android:layout_span="1"
                        android:id="@+id/tvSpeedname"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="throwinga"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvSpeedScore" />
                </TableRow>
                <TableRow
                    android:id="@+id/tableRow14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/base"
                        android:layout_span="1"
                        android:id="@+id/tvBasename"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="throwinga"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvBaseScore" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/draft"
                        android:layout_span="1"
                        android:id="@+id/tvDraftablename"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="draft"
                        android:layout_gravity="bottom"
                        android:paddingLeft="2dp"
                        android:id="@+id/tvDraftableScore" />


                </TableRow>
                <TableRow
                    android:id="@+id/tableRow20"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/player_note"
                        android:layout_span="1"
                        android:layout_gravity="top|left"
                        android:id="@+id/tvNotename"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="note"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:ems="10"
                        android:id="@+id/etNoteValue"
                        android:layout_column="1" />
                </TableRow>

            </TableLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</LinearLayout>
